Bug 411826 - "Mingw build error: undefined reference to `WinMain@16'" (Use CommandLineToArgvW) [p=mook.moz+mozbz@gmail.com (Mook) r=bsmedberg a1.9=schrep]